--- a/trunk/CR_StyleCop/CR_StyleCop.TestCode/CR_StyleCop.TestCode.csproj
+++ b/trunk/CR_StyleCop/CR_StyleCop.TestCode/CR_StyleCop.TestCode.csproj
@@ -47,6 +47,8 @@
   <ItemGroup>
     <Compile Include="SA1000TestCode.cs" />
     <Compile Include="SA1001TestCode.cs" />
+    <Compile Include="SA1002TestCode.cs" />
+    <Compile Include="SA1003TestCode.cs" />
     <Compile Include="SA1632TestCode.cs" />
     <Compile Include="SA1610TestCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
