--- a/trunk/XPO_EasyFields/XPO_EasyFields/XPO_EasyFields.vbproj
+++ b/trunk/XPO_EasyFields/XPO_EasyFields/XPO_EasyFields.vbproj
@@ -38,7 +38,7 @@
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
-    <OutputPath>C:\Users\Michael\Documents\DevExpress\IDE Tools\Community\PlugIns</OutputPath>
+    <OutputPath>X:\DevExpress\CodeRush\Community\PlugIns\</OutputPath>
     <DocumentationFile>XPO_EasyFields.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
